# bnp-api

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
src/bnp_api/: __init__.py  __main__.py  server.py
