[project]
name = "bnp-api"
version = "0.1.0"
description = "Servidor MCP para o Banco Nacional de Precedentes (BNP/PAGEA) do CNJ. Busca precedentes vinculantes do STF e STJ."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "George Marmelstein" }]
keywords = ["mcp", "bnp", "cnj", "precedentes", "jurisprudencia", "stf", "stj"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "tenacity>=8.0.0",
]

[project.scripts]
bnp-api = "bnp_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bnp_api"]
